# fiasco-trace-to-ctf

./: Cargo.toml  README.md  run.sh
converter/: Cargo.toml
converter/ctf_trace/: metadata  stream
converter/macros/src/: lib.rs
converter/src/: convert.rs  converter.rs  events.rs  lib.rs  main.rs  opts.rs  plugin.rs  types.rs
eval/: ctrl.py  plot.py
eval/data/: 06_02.txt  fwq_output.txt  output-by-cpu.txt  output-by-rate-server.txt  output-by-rate.txt  output_by_cpu.txt  output_by_rate_i0.txt  output_by_rate_i5.txt
parser/: Cargo.toml  LICENSE  README.md
parser/src/: lib.rs  parser.rs
parser/src/event/: bp.rs  common.rs  context_switch.rs  destroy.rs  drq.rs  empty.rs  exregs.rs  factory.rs  fullsize.rs  gate.rs  ieh.rs  ipc.rs  ipc_res.rs  ipfh.rs  irq.rs  ke.rs  ke_bin.rs  ke_reg.rs  l4_event.rs  migration.rs  mod.rs  nam.rs  pf.rs  rcu.rs  sched.rs  svm.rs  timer.rs  tmap.rs  trap.rs  vcpu.rs
src/: helpers.rs  main.rs  opts.rs
src/converter/: convert.rs  converter.rs  events.rs  kernel_object.rs  mod.rs  opts.rs  plugin.rs  types.rs
src/converter/event/: ipc.rs  ipc_res.rs  ipc_type.rs  ke.rs  ke_bin.rs  ke_reg.rs  mod.rs  nam.rs  sched_migrate_task.rs  sched_switch.rs  unsupported.rs
src/event/: common.rs  empty.rs  exregs.rs  factory.rs  ieh.rs  ipc.rs  ke.rs  ke_bin.rs  ke_reg.rs  mod.rs  nam.rs  sched.rs  svm.rs  tmap.rs  trap.rs
src/macros/src/: lib.rs
src/parser/: error.rs  mod.rs  parser.rs
src/parser/event/: bp.rs  common.rs  context_switch.rs  destroy.rs  drq.rs  empty.rs  event_type.rs  ke.rs  (+23 more)
tool/: gen_events.gdb  gen_events.py
